# PAOO

TemaPAOO/Tema1/: CMakeLists.txt
TemaPAOO/Tema1/headere/: Barcelona.hpp  EchipaFotbal.hpp  RealMadrid.hpp
TemaPAOO/Tema1/src/: Barcelona.cpp  EchipaFotbal.cpp  Main.cpp  RealMadrid.cpp
